syntax = "proto3";

package onight.zjfae.afront.gensazj;


option java_package="onight.zjfae.afront.gensazj";
option java_outer_classname="MyDiscountCount";
//Generated By BrewRobot:Mon Nov 28 11:46:19 CST 2016

message PBIFE_kq_getMyDiscountCount{
	///ife/kq/getMyDiscountCount.html

	string availableRCount = 1; //,可用红包数量,String,不校验,是,

	string availableFCount = 2; //,可用满减券数量,String,不校验,是,

	string availableLCount = 3; //,可用抵价券数量,String,不校验,是,

	string availableACount = 4; //,可用加息券数量,String,不校验,是,

	string soonExpireCount = 5; //,即将过期数量,String,不校验,是,

	string yhqCount = 6; //,可用优惠券数量,String,不校验,是,可用满减+可用抵价+可用加息数量
	
	string availableTCount = 7; //,可用其他券数量,String,不校验,是,


}

message Ret_PBIFE_kq_getMyDiscountCount{
	///ife/kq/getMyDiscountCount.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_kq_getMyDiscountCount data=3;


}

message REQ_PBIFE_kq_getMyDiscountCount{
	///ife/kq/getMyDiscountCount.html


}