syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="LoginOut";
//Generated By BrewRobot:Thu Jun 08 15:05:56 CST 2017

message PBIFE_logout{
	///ife/logout.html

	string returnCode = 1; //,returnCode,

	string returnMsg = 2; //,returnMsg,


}

message Ret_PBIFE_logout{
	///ife/logout.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_logout data=3;


}

message REQ_PBIFE_logout{
	///ife/logout.html


}